--- a/html/styles/factorio.css
+++ b/html/styles/factorio.css
@@ -12,3 +12,15 @@
 html {
     background-color: #363636;
 }
+
+#search {
+    width: 10em;
+}
+
+#search-limit{
+    width: 5em;
+}
+
+.inline{
+    display: inline;
+}
