--- a/html/styles/factorio.css
+++ b/html/styles/factorio.css
@@ -32,3 +32,20 @@ html {
 .flex {
     display: flex;
 }
+
+.hidden {
+    display: none !important;
+}
+
+#login-form {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 99;
+}
