--- a/html/styles/factorio.css
+++ b/html/styles/factorio.css
@@ -27,6 +27,8 @@ html {
 
 #output {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
 .flex {
@@ -37,7 +39,7 @@ html {
     display: none !important;
 }
 
-#login-form {
+.popup {
     position: fixed;
     top: 0;
     left: 0;
